# LOTPROC

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
docs/: API.md
src/lotproc/: api.py  buffering.py  export.py  filters.py  ingest.py  models.py  pipeline.py  preparation.py  processing.py  processors.py  serialization.py  targets.py  testing.py  traversal.py  write_policies.py
tests/: helpers.py  test_export.py  test_imports.py  test_ingest.py  test_pipeline.py  test_processors.py  test_serialization.py
