[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotproc"
version = "0.1.0"
description = "LOTPROC package scaffold"
authors = [
    {name = "Till Spitz", email = "tillh.spitz@t-online.de"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "lotdb>=1.1.3",
]

[project.optional-dependencies]
dataframes = [
    "pandas",
]
dev = [
    "pandas",
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
